--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,32 +14,21 @@ jobs:
     if: always() && github.event_name == 'push'
     runs-on: ubuntu-latest
     outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
+      upload_url: ${{ steps.get_upload_url.outputs.upload_url }}
     steps:
-    - name: Delete Old Edge Release
-      uses: dev-drprasad/delete-tag-and-release@v0.2.0
-      with:
-        delete_release: true
-        tag_name: edge
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Create New Edge Release
       id: create_release
-      uses: softprops/action-gh-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: marvinpinto/action-automatic-releases@latest
       with:
-        tag_name: edge
-        name: Edge
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: edge
+        title: Edge
         prerelease: true
-        draft: false
-        body: ${{ github.event.head_commit.message }}
-    - id: test
-      name: Test
+    - name: Get upload url
+      id: get_upload_url
+      uses: bruceadams/get-release@v1.2.2
       env:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-      run: |
-        echo "Upload url: $upload_url"
+        GITHUB_TOKEN: ${{ github.token }}
 
   upload_release_assets:
     name: Upload Release Assets
