--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,21 +14,26 @@ jobs:
     if: always() && github.event_name == 'push'
     runs-on: ubuntu-latest
     outputs:
-      upload_url: ${{ steps.get_upload_url.outputs.upload_url }}
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
+    - name: Delete Old Edge Release
+      uses: dev-drprasad/delete-tag-and-release@v0.2.0
+      with:
+        delete_release: true
+        tag_name: edge
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Create New Edge Release
       id: create_release
-      uses: marvinpinto/action-automatic-releases@latest
-      with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: edge
-        title: Edge
-        prerelease: true
-    - name: Get upload url
-      id: get_upload_url
-      uses: bruceadams/get-release@v1.2.2
+      uses: softprops/action-gh-release@v0.1.5
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: edge
+        name: Edge
+        prerelease: true
+        draft: false
+        body: ${{ github.event.head_commit.message }}
 
   upload_release_assets:
     name: Upload Release Assets
@@ -36,6 +41,8 @@ jobs:
     if: always()
     runs-on: ubuntu-latest
     steps:
+    - name: Download All Workflow Artifacts
+      uses: actions/download-artifact@v2
     - name: Get Release Upload URL
       id: get_upload_url
       env:
@@ -43,8 +50,6 @@ jobs:
         event: ${{ toJson(github.event) }}
         edge_upload_url: ${{ needs.update_edge_release.outputs.upload_url }}
       run: |
-        echo "Event name: $event_name"
-        echo "Edge upload url: $edge_upload_url"
         if [ "$event_name" = "release" ]; then
           upload_url=$(echo "$event" | jq -r ".release.upload_url")
         else
