--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
+      html_url: ${{ steps.create_release.outputs.url }}
     steps:
     - name: Delete Old Edge Release
       uses: dev-drprasad/delete-tag-and-release@v0.2.0
@@ -49,7 +50,10 @@ jobs:
         event_name: ${{ github.event_name }}
         event: ${{ toJson(github.event) }}
         edge_upload_url: ${{ needs.update_edge_release.outputs.upload_url }}
+        edge_html_url: ${{ needs.update_edge_release.outputs.html_url }}
       run: |
+        echo "Upload url: $edge_upload_url"
+        echo "Edge url: $edge_html_url"
         if [ "$event_name" = "release" ]; then
           upload_url=$(echo "$event" | jq -r ".release.upload_url")
         else
