--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,9 +14,7 @@ jobs:
     if: always() && github.event_name == 'push'
     runs-on: ubuntu-latest
     outputs:
-      outputs: ${{ toJson(steps.create_release.outputs) }}
       upload_url: ${{ steps.create_release.outputs.upload_url }}
-      html_url: ${{ steps.create_release.outputs.url }}
     steps:
     - name: Delete Old Edge Release
       uses: dev-drprasad/delete-tag-and-release@v0.2.0
@@ -27,7 +25,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Create New Edge Release
       id: create_release
-      uses: softprops/action-gh-release@master #ppd/action-gh-release@master
+      uses: ppd/action-gh-release@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -51,12 +49,7 @@ jobs:
         event_name: ${{ github.event_name }}
         event: ${{ toJson(github.event) }}
         edge_upload_url: ${{ needs.update_edge_release.outputs.upload_url }}
-        edge_html_url: ${{ needs.update_edge_release.outputs.html_url }}
-        edge_outputs: ${{ needs.update_edge_release.outputs.outputs }}
       run: |
-        echo "Upload url: $edge_upload_url"
-        echo "Edge url: $edge_html_url"
-        echo "Outputs: $edge_outputs"
         if [ "$event_name" = "release" ]; then
           upload_url=$(echo "$event" | jq -r ".release.upload_url")
         else
