--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -64,7 +64,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_upload_url.outputs.upload_url }}
-        asset_path: version
+        asset_path: ./version
         asset_name: version
         asset_content_type: text/plain
    
