--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -58,6 +58,7 @@ jobs:
         fi
         echo "::set-output name=upload_url::$upload_url"
         echo "Upload URL: $upload_url"
+        echo "test" > test
     - name: Upload version
       uses: actions/upload-release-asset@v1
       continue-on-error: true
@@ -65,7 +66,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_upload_url.outputs.upload_url }}
-        asset_path: ./version
-        asset_name: version
+        asset_path: ./test
+        asset_name: test
         asset_content_type: text/plain
    
