--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,15 +10,15 @@ on:
 
 jobs:
   cancel_previous_run:
-    name: Cancel previous workflow run
+    name: Cancel Previous Runs
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
-    - name: Cancel Previous Runs
-      uses: styfle/cancel-workflow-action@0.8.0
+    - uses: styfle/cancel-workflow-action@0.8.0
       with:
         access_token: ${{ github.token }}
   update_edge_release:
+    needs: [cancel_previous_run]
     name: Update Edge Release
     if: always() && github.event_name == 'push'
     runs-on: ubuntu-latest
